# minimax_voicehub

./: .gitignore  README.md  app.py  pyproject.toml  run_voice_manager.bat
components/: __init__.py  audio_parameters.py  clone_voices_manager.py  debug_panel.py  excel_manager.py  sidebar.py  system_voices_manager.py  voice_manager.py
pages/: __init__.py  add_voice.py  batch_upload.py  test_voice.py  voice_list.py
utils/: excel.py  naming.py
